Require email verification to complete signup